--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 padding: 10px 20px;
             }
         }
+        /* 新增：页面背景颜色 */
+        body {
+            background-color: #f0f7ff; /* 淡蓝色背景，可根据喜好替换 */
+            margin: 0;
+            min-height: 100vh;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +38,7 @@
                 '记得加衣！', '记得照顾好自己', '天天开心', 
                 '好好吃饭', '早点休息', '别感冒',
                 '要一直幸福呀～', '多喝水哦', '保持微笑😊',
-                '再忙也要照顾好自己', '今天也要元气满满', '记得想我哦'
+                '再忙也要照顾好自己', '鸣筝大王无敌', '记得玩明日方舟哦'
             ];
             const text = texts[Math.floor(Math.random() * texts.length)];
             
